--- a/style.css
+++ b/style.css
@@ -1,32 +1,2 @@
-.body_backgorund {
-    background-image: url("https://i.postimg.cc/63cjmfvH/bg1.jpg");
-    background-position: center;
-    background-size: cover;
-  }
-  body{
-    cursor: pointer;
-  }
-  h1
-  {
-      color: red; 
-      font-size: 20px;
-  }
-  #myCanvas
-  {
-      border-width:10px;
-      background-color: white; 
-      border-style:ridge;
-  }
-
-  button {
-    background-color: #4CAF50;
-    border: none;
-    color: white;
-    padding: 10px 42px;
-    font-size: 16px;
-  }
-
-  input
-  {
-    margin-right: 20px;
-  }
+body { background: lightblue; } .login_div1 , .login_div2 { background: white; padding: 10px; float: none; border-radius: 15px; } #player1_name , #player2_name { display: inline-block; margin-left: 20px; }
+#word { width: 60%; } #word_display { letter-spacing: 5px; } #output { background: white; border-radius: 10px; border-top: 10px solid #AA4465; padding: 10px; float: none; text-align: left; }
